# aureca

./: .gitignore  README.md  docker-compose.yml  makefile  spec-template.md
.github/: CODEOWNERS
.github/workflows/: backend-tests.yml  ci.yml  frontend-tests.yml  status-check.yml
.kiro/steering/: product.md  structure.md  tech.md
backend/: .env.development  .env.example  .env.production  .env.staging  .gitignore  Dockerfile  README.md  TEST_IMPROVEMENT_SUMMARY.md  debug_sql.py  debug_sqlmodel.py  main.py  pyproject.toml
backend/app/: config.py  database.py  schema.py
backend/app/cli/: __init__.py  config_manager.py
backend/app/config/: __init__.py  ai_chat_limits.json  app.py  auth.py  database.py  logging.py  manager.py  stripe.py
backend/app/constants/: plan_limits.py
backend/app/migrations/versions/: 176d584d7539_rename_todo_to_task.py  2dc03f02d485_remove_email_password.py  44e0e7791d37_create_task_source.py  55a37c1d5c06_create_password_reset_tokens.py  655e04c7f2b0_optimize_chat_performance_indexes.py  6e543f3fb891_add_stripe_customer_id_and_.py  738565e1bc75_create_todo_list.py  a5cc035d75d6_init.py  af62fb93b70c_add_chat_thread_and_message_models.py  d6dfb3322f2a_add_task_priority_field.py  e89ba24a8c2b_add_ai_chat_usage_logs_table.py  f1a2b3c4d5e6_migrate_ai_chat_usage_logs_to_ai_chat_usage.py  ff33171c7eed_add_google_oauth_tokens_table.py
backend/app/models/: ai_assistant.py  ai_chat_usage.py  chat.py  google_mail.py  stripe.py  subscription.py  task.py  user.py
backend/app/repositories/: ai_chat_usage.py  chat_message.py  chat_thread.py  google_oauth_token.py  password_reset.py  subscription.py  task_source.py  tasks.py  user.py
backend/app/routers/: routers.py
backend/app/routers/api/: admin.py  ai_assistant.py  auth.py  chat.py  google_oauth.py  health.py  mail.py  stripe.py  tasks.py  users.py  webhooks.py
backend/app/services/: ai_chat_usage_service.py  ai_task_service.py  auth.py  chat_service.py  clerk_service.py  gmail_service.py  google_calendar_service.py  google_oauth.py  stripe_service.py  stripe_webhook_handler.py  user_service.py
backend/app/services/ai/: __init__.py  exceptions.py
backend/app/services/ai/core/: __init__.py  hub.py  models.py
backend/app/services/ai/spokes/: __init__.py  base.py  manager.py  spoke_interface.py
backend/app/services/ai/spokes/gmail/: actions.json  spoke.py
backend/app/services/ai/spokes/google_calendar/: __init__.py  actions.json  spoke.py
backend/app/services/ai/spokes/task/: spoke.py
backend/app/services/ai/spokes/tasks/: actions.json  spoke.py
backend/app/services/ai/utils/: __init__.py  exceptions.py  logger.py
backend/app/utils/: exceptions.py  llm.py  retry.py
backend/app/utils/auth/: __init__.py  clerk.py
backend/tests/: conftest.py  debug_concurrent_test.py  debug_datetime_test.py  debug_priority_test.py  debug_simple_test.py
backend/tests/integration/: test_admin_api_config.py  test_ai_chat_usage_api_integration.py  test_ai_chat_usage_e2e_integration.py  test_ai_chat_usage_error_handling.py  test_ai_chat_usage_integration_simple.py  test_ai_priority_detection.py  test_ai_process_usage_limits.py  test_chat_ai_hub_integration.py  test_chat_api.py  test_chat_e2e_workflow.py  test_chat_requirements_validation.py  test_clerk_api_integration.py  test_stripe_endpoints.py  test_stripe_webhook_endpoint.py  test_task_api.py  test_task_priority_sorting.py  test_two_plan_e2e.py  test_users_api_endpoint.py  test_users_api_integration.py
backend/tests/performance/: test_ai_chat_usage_performance.py  test_chat_performance.py  test_chat_performance_comprehensive.py  test_chat_performance_optimized.py  test_index_optimization.py  test_task_priority_performance.py
backend/tests/unit/: test_ai_chat_usage_repository.py  test_ai_chat_usage_service.py  test_chat_message_repository.py  test_chat_service.py  test_chat_thread_repository.py  test_clerk_service.py  test_config_manager.py  test_error_handling.py  test_plan_limits.py  test_stripe_router.py  test_stripe_webhook_handler.py  test_task_priority_enum.py  test_task_repository.py  test_user_service.py
backend/tests/utils/: README.md  __init__.py  performance.py  test_data_factory.py  test_error_scenarios.py  test_utilities_validation.py  user_factory.py
docs/: README.md  architecture.md  backend-testing.md  deployment-checklist.md  deployment.md  development.md  environment-configuration.md  tech-stack.md
frontend/: .env.development  .env.example  .env.production  .env.staging  .gitignore  Dockerfile  TEST_IMPLEMENTATION_SUMMARY.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ci.js  vitest.config.js
scripts/: setup-environment.sh  validate-environment.py
(+214 files in other folders)
